--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/seedrandom": "^2.4.28",
+    "firebase": "^8.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "seedrandom": "^3.0.5",
     "typescript": "^4.0.3"
   },
   "scripts": {
