Hosting: run predeploy script to build app

--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -15,7 +15,11 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "predeploy": [
+      "rm -rf ./public && yarn --cwd .. build && mv ../build ./public"
+    ],
+    "rewrites": []
   },
   "emulators": {
     "auth": {
