--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -19,7 +19,12 @@
     "predeploy": [
       "rm -rf ./public && yarn --cwd .. build && mv ../build ./public"
     ],
-    "rewrites": []
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   },
   "emulators": {
     "auth": {
